set Today() to midnight for comparisons

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -56,7 +56,7 @@
     "errorSelect": "Welsh {{.Label}}",
     "errorEmail": "{{.Label}} Welsh",
 
-    "homeAddress": "Cyfeiriad cartref",
+    "whatIsYourAddress": "Welsh",
     "postcode": "Cod post",
     "findAddress": "Dod o hyd i gyfeiriad",
     "enterAddressManually": "Welsh",
