--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -507,5 +507,8 @@
     "lpaRegistered": "Welsh",
     "trackLpaProgress": "Welsh",
     "backToDashboard": "Welsh",
-    "myLpa": "Welsh {{ .LpaType }} welsh"
+    "myLpa": "Welsh {{ .LpaType }} welsh",
+
+    "yourLegalRightsAndResponsibilities": "Welsh",
+    "yourLegalRightsAndResponsibilitiesContent": "<p class=\"govuk-body\">Welsh</p>"
 }
