update button and error

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -348,14 +348,18 @@
     "explainAttorneysPowersHw": "<p class=\"govuk-body\">Mae hyn yn golygu, unwaith y bydd yr LPA wedi’i chofrestru, bydd gan {{ .AllAttorneysFirstNames }} y pŵer cyfreithiol i:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>pŵer HW</li> <li>pŵer HW arall</li> </ul>",
     "attorneysCanActOnlyIfAskedWarning": "Tra bod gennych alluedd meddyliol, gall {{ .AllAttorneysFirstNames }} dim ond wneud y pethau hyn os gofynnwch iddynt wneud.",
     "attorneysMustFollowMCA": "<p class=\"govuk-body\">Rhaid iddynt ddilyn y cyfyngiadau a wnaethoch yn eich LPA a’r rheolau yn y <a class=\"govuk-link\" href=\"https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921428/Mental-capacity-act-code-of-practice.pdf\">Ddeddf Galluedd Meddyliol a’r cod ymarfer.</a> </p>",
-    "formPanelContent": "<h2 class=\"govuk-heading-m govuk-!-margin-bottom-2\">Llofnodwch eich LPA</h2> <p class=\"govuk-body\">Pan fyddwch yn ticio’r blychau hyn rydych yn llofnodi’ch LPA yn gyfreithiol.</p>",
+    "bySigningIConfirm": "Welsh {{ .TypeLegalTermTransKey}} welsh:",
+    "iGiveAttorneysAuthority": "Welsh {{ .TypeLegalTermTransKey}}, welsh",
+    "iHaveChosenNPeopleToNotify": "Welsh {{ .CountPeopleToNotify }} welsh",
+    "infoIProvidedCanBeUsedByOpg": "Welsh",
+    "whenYouTickAndClick": "Welsh",
     "iConfirmThat": "Rwyf i, {{ .DonorFullName }}, yn cadarnhau:",
     "cpIsWitnessingMeSign": "Fod {{ .CertificateProviderFullName }} yn fy nhystio i’n llofnodi’r LPA hon",
     "wantToApply": "Fy mod am wneud cais i gofrestru’r LPA hon",
     "howTickingActsAsSignature": "Welsh",
     "howTickingActsAsSignatureContent": "<p class=\"govuk-body\">Welsh</p> <p class=\"govuk-body\">Welsh</p>",
     "submitSignature": "Cyflwyno fy llofnod",
-    "bothBoxesToSign": "Welsh",
+    "bothBoxesToSignAndApply": "Welsh",
     "iWantToSignThisLpa": "Welsh",
 
     "witnessYourSignature": "Tystio eich llofnod",
