--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -309,7 +309,7 @@
     "bySigningIConfirm": "By signing my {{ .TypeLegalTermTransKey}} LPA, I confirm all of the following:",
     "iGiveAttorneysAuthority": "I give my attorneys authority to make decisions about my {{ .TypeLegalTermTransKey}}, including when I cannot act for myself because I do not have mental capacity.",
     "iHaveChosenNPeopleToNotify": "I have chosen to notify {{ .CountPeopleToNotify }} people about my LPA.",
-    "infoIProvidedCanBeUsedByOpg": "The information I've provided can be used by the Office of the Public Guardian when carrying out its duties.",
+    "infoIProvidedCanBeUsedByOpg": "The information I’ve provided can be used by the Office of the Public Guardian when carrying out its duties.",
     "whenYouTickAndClick": "When you tick these boxes and select ‘Submit my signature’ you are legally signing your LPA.",
     "iConfirmThat": "I, {{ .DonorFullName }}, confirm that:",
     "cpIsWitnessingMeSign": "{{ .CertificateProviderFullName }} is witnessing me sign this LPA",
@@ -317,7 +317,7 @@
     "howTickingActsAsSignature": "How ticking the boxes acts as your legal signature",
     "howTickingActsAsSignatureContent": "<p class=\"govuk-body\">Electronic signatures are legally recognised in England and Wales. They make it easier for you to sign documents online.</p><p class=\"govuk-body\">By ticking both boxes and selecting ‘Submit my signature’, you are providing your legal signature. This is just as safe and legally binding as signing your LPA by hand.</p>",
     "submitSignature": "Submit my signature",
-    "bothBoxesToSign": "both boxes to sign your LPA",
+    "bothBoxesToSignAndApply": "You must select both boxes to sign and apply to register your LPA",
     "iWantToSignThisLpa": "I want to sign this LPA",
 
     "witnessYourSignature": "Witnessing your signature",
