move zero people to template conditional (as english does not support zero pluralisation)

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -346,6 +346,7 @@
         "many": "Welsh {{ .CountPeopleToNotify }} welsh",
         "other": "Welsh {{ .CountPeopleToNotify }} welsh"
     },
+    "iHaveNotChosenToNotifyAnyone": "Welsh",
     "infoIProvidedCanBeUsedByOpg": "Welsh",
     "whenYouTickAndClick": "Welsh",
     "iConfirmThat": "Rwyf i, {{ .DonorFullName }}, yn cadarnhau:",
