--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -293,6 +293,7 @@
     "iConfirmIMadeThisLpaOfMyOwnFreeWill": "I confirm that I made this LPA of my own free will",
     "typeSignatureCode": "Type your signature code to sign",
     "iHaventReceivedSignatureCode": "I haven’t received a signature code",
+    "continueToSigningPage": "Continue to signing page",
 
     "signYourLpa": "Sign your LPA",
     "signYourLpaHeader": "<h2 class=\"govuk-heading-m\">Signing the LPA is an important and powerful legal step.</h2>",
