--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -56,6 +56,22 @@
     "errorSelect": "Select {{.Label}}",
     "errorEmail": "{{.Label}} must be in the correct format, like name@example.com",
 
+    "errorDonorMatchesActor": "The donor’s name is also {{.FirstNames}} {{.LastName}}. The donor cannot be {{.Type}}.",
+    "errorAttorneyMatchesActor": "There is also an attorney called {{.FirstNames}} {{.LastName}}. An attorney cannot be {{.Type}}.",
+    "errorAttorneyMatchesAttorney": "There is already an attorney called {{.FirstNames}} {{.LastName}}",
+    "errorReplacementAttorneyMatchesActor": "There is also a replacement attorney called {{.FirstNames}} {{.LastName}}. A replacement attorney cannot be {{.Type}}.",
+    "errorReplacementAttorneyMatchesReplacementAttorney": "There is already a replacement attorney called {{.FirstNames}} {{.LastName}}.",
+    "errorCertificateProviderMatchesActor": "The certificate provider’s name is also {{.FirstNames}} {{.LastName}}. The certificate provider cannot be {{.Type}}.",
+    "errorPersonToNotifyMatchesActor": "There is also a person to notify called {{.FirstNames}} {{.LastName}}. A person to notify cannot be {{.Type}}.",
+    "errorPersonToNotifyMatchesPersonToNotify": "There is already a person to notify called {{.FirstNames}} {{.LastName}}.",
+    "bySavingThisSectionDifferentPeople": "By saving this section, you are confirming that these are 2 different people with the same name.",
+
+    "theDonor": "the donor",
+    "anAttorney": "an attorney",
+    "aReplacementAttorney": "a replacement attorney",
+    "theCertificateProvider": "the certificate provider",
+    "aPersonToNotify": "a person to notify",
+
     "whatIsYourAddress": "What is your address?",
     "postcode": "Postcode",
     "findAddress": "Find address",
