--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -528,5 +528,15 @@
     "myLpa": "Welsh {{ .LpaType }} welsh",
 
     "yourLegalRightsAndResponsibilities": "Welsh",
-    "yourLegalRightsAndResponsibilitiesContent": "<p class=\"govuk-body\">Welsh</p>"
+    "yourLegalRightsAndResponsibilitiesContent": "<p class=\"govuk-body\">Welsh</p>",
+
+    "provideTheCertificate": "Welsh",
+    "certifyStatementsContent": "<p class=\"govuk-body\">Welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> <li>welsh</li> </ul>",
+    "bySigningIConfirmContent": "<p class=\"govuk-body\">Welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> <li>welsh</li> <li>welsh</li> <li>welsh</li> </ul>",
+    "iAgreeToThisStatement": "Welsh",
+    "agreeToStatement": "welsh",
+
+    "certificateProvided": "Welsh",
+    "wellDone": "Welsh",
+    "certificateProvidedContent": "<p class=\"govuk-body\">Welsh</p>"
 }
