--- a/lang/cy.json
+++ b/lang/cy.json
@@ -535,5 +535,15 @@
     "beingACertificateProviderContent": "<p class=\"govuk-body\">Welsh</p>",
 
     "finishedForNow": "Welsh",
-    "finishedForNowContent": "<p class=\"govuk-body\">Welsh</p>"
+    "finishedForNowContent": "<p class=\"govuk-body\">Welsh</p>",
+
+    "provideTheCertificate": "Welsh",
+    "certifyStatementsContent": "<p class=\"govuk-body\">Welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> <li>welsh</li> </ul>",
+    "bySigningIConfirmContent": "<p class=\"govuk-body\">Welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> <li>welsh</li> <li>welsh</li> <li>welsh</li> </ul>",
+    "iAgreeToThisStatement": "Welsh",
+    "agreeToStatement": "welsh",
+
+    "certificateProvided": "Welsh",
+    "wellDone": "Welsh",
+    "certificateProvidedContent": "<p class=\"govuk-body\">Welsh</p>"
 }
