--- a/lang/en.json
+++ b/lang/en.json
@@ -504,5 +504,9 @@
 
     "certificateProvided": "Congrats! Certificate has been provided",
     "wellDone": "Well done. All your hard work payed off.",
-    "certificateProvidedContent": "<p class=\"govuk-body\">If you fancy it, grab a snack and call it a day now. Some more content here about next steps (maybe?)</p>"
+    "certificateProvidedContent": "<p class=\"govuk-body\">If you fancy it, grab a snack and call it a day now. Some more content here about next steps (maybe?)</p>",
+
+    "enterYourReferenceCode": "Enter your reference code",
+    "certificateProviderReferenceCodeContent": "<p class=\"govuk-body\">Some content asking the CP to enter their ref code</p>",
+    "referenceCode": "reference code"
 }
