Add templates for error pages

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -545,5 +545,11 @@
 
     "certificateProvided": "Welsh",
     "wellDone": "Welsh",
-    "certificateProvidedContent": "<p class=\"govuk-body\">Welsh</p>"
+    "certificateProvidedContent": "<p class=\"govuk-body\">Welsh</p>",
+
+    "pageNotFound": "Welsh",
+    "pageNotFoundContent": "<p class=\"govuk-body\">Welsh</p><p class=\"govuk-body\">Welsh <a class=\"govuk-link\" href=\"{{.Start}}\">Welsh</a>.</p>",
+
+    "sorryProblem": "Welsh",
+    "tryAgainLater": "Welsh"
 }
