--- a/lang/en.json
+++ b/lang/en.json
@@ -518,5 +518,5 @@
 
     "enterYourReferenceCode": "Enter your reference code",
     "certificateProviderReferenceCodeContent": "<p class=\"govuk-body\">Some content asking the CP to enter their ref code</p>",
-    "referenceCode": "reference code"
+    "referenceCode": "Reference code"
 }
