--- a/lang/cy.json
+++ b/lang/cy.json
@@ -555,5 +555,10 @@
 
     "beACertificateProvider": "Welsh",
     "beACertificateProviderContent": "<p class=\"govuk-body\">Welsh</p>",
-    "beACertificateProviderPostStartContent": "<p class=\"govuk-body\">Welsh</p>"
+    "beACertificateProviderPostStartContent": "<p class=\"govuk-body\">Welsh</p>",
+
+    "enterYourReferenceCode": "Welsh",
+    "certificateProviderReferenceCodeContent": "<p class=\"govuk-body\">Welsh</p>",
+    "referenceCode": "Welsh",
+    "incorrectReferenceCode": "Welsh"
 }
