--- a/lang/cy.json
+++ b/lang/cy.json
@@ -560,5 +560,12 @@
     "enterYourReferenceCode": "Welsh",
     "certificateProviderReferenceCodeContent": "<p class=\"govuk-body\">Welsh</p>",
     "referenceCode": "Welsh",
-    "incorrectReferenceCode": "Welsh"
+    "incorrectReferenceCode": "Welsh",
+
+    "howDoYouKnowTheDonorTitle": "Welsh",
+    "howDoYouKnowTheDonor": "Welsh {{.FullName}}",
+    "personally": "Welsh",
+    "personallyHint": "Welsh",
+    "professionally": "Welsh",
+    "professionallyHint": "Welsh"
 }
