--- a/lang/cy.json
+++ b/lang/cy.json
@@ -534,8 +534,7 @@
     "beingDonorsCertificateProvider": "Welsh {{.FullName}}",
     "beingACertificateProviderContent": "<p class=\"govuk-body\">Welsh</p>",
 
-    "finishedForNow": "Welsh",
-    "finishedForNowContent": "<p class=\"govuk-body\">Welsh</p>",
+    "whatHappensNextContent": "<p class=\"govuk-body\">Welsh {{.DonorFullName}}</p>",
 
     "provideTheCertificate": "Welsh",
     "certifyStatementsContent": "<p class=\"govuk-body\">Welsh:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>welsh</li> <li>welsh</li> <li>welsh</li> </ul>",
