--- a/lang/en.json
+++ b/lang/en.json
@@ -521,18 +521,5 @@
     "certificateProviderReferenceNumberHint": "This will be made up of 12 characters like ABCD 1234 5678",
     "incorrectReferenceNumber": "The certificate provider reference number you entered is incorrect, please check it and try again",
     "twelveCharactersReferenceNumber": "your 12 character certificate provider reference number",
-    "referenceNumberMustBeTwelveCharacters": "The certificate provider reference number you enter must contain 12 characters",
-
-    "howDoYouKnowTheDonorTitle": "How do you know the donor?",
-    "howDoYouKnowTheDonor": "How do you know {{.FullName}}?",
-    "personally": "Personally",
-    "personallyHint": "For example, as a friend or neighbour",
-    "professionally": "In a professional capacity",
-    "professionallyHint": "For example, as their GP or solicitor, with the relevant professional skills and expertise to check whether they understand their LPA.",
-    "howYouKnowDonor": "how you know the donor",
-
-    "howLongHaveYouKnownDonorTitle": "How long have you know the donor?",
-    "howLongHaveYouKnownDonor": "How long have you know {{.FullName}}?",
-    "howLongYouHaveKnownDonor": "how long you have known the donor",
-    "mustHaveKnownDonorTwoYears": "You must have known the donor for 2 years or more"
+    "referenceNumberMustBeTwelveCharacters": "The certificate provider reference number you enter must contain 12 characters"
 }
