MLPAB-704: Certificate provider check your name (#365)

--- a/lang/cy.json
+++ b/lang/cy.json
@@ -575,5 +575,12 @@
     "howLongHaveYouKnownDonorTitle": "Welsh",
     "howLongHaveYouKnownDonor": "Welsh {{.FullName}}",
     "howLongYouHaveKnownDonor": "Welsh",
-    "mustHaveKnownDonorTwoYears": "Welsh"
+    "mustHaveKnownDonorTwoYears": "Welsh",
+
+    "checkAndConfirmYourName": "Welsh",
+    "checkAndConfirmYourNameContent": "<p class=\"govuk-body\">Welsh</p> <p class=\"govuk-body\">Welsh {{ .DonorFullName }}, welsh:</p> <div class=\"govuk-inset-text\">{{ .CertificateProviderFullName }}</div>",
+    "isYourNameCorrect": "Welsh?",
+    "enterYourFullName": "Welsh",
+    "yourFullName": "welsh",
+    "yesIfTheNameIsCorrect": "welsh"
 }
